k8s/superiad-service.yml
apiVersion: v1
kind: Service
metadata:
  name: superiad
  namespace: flexable
spec:
  type: NodePort
  selector:
    app: superiad
  ports:
    - port: 8000
      targetPort: 8000
